Add WebM hero video with MP4 fallback

--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
       href="https://fonts.googleapis.com/css2?family=Fraunces:wght@500;700&family=Space+Grotesk:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="preload"
+      as="video"
+      href="/animations/soulmate.webm"
+      type="video/webm"
+    />
   </head>
   <body>
     <div class="atmosphere" aria-hidden="true">
