--- a/public/steps/index.html
+++ b/public/steps/index.html
@@ -37,8 +37,9 @@
                   autoplay
                   muted
                   playsinline
-                  preload="metadata"
+                  preload="auto"
                 >
+                  <source src="/animations/soulmate.webm" type="video/webm" />
                   <source
                     src="/animations/Generated%20File%20January%2028,%202026%20-%202_02PM.mp4"
                     type="video/mp4"
